<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
        tools:context=".MainActivity">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/accelerometro_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/accelerometro_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"
            />
            <TextView
                    android:text="@string/valor_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/acc_valorx_tv"
                    android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/valor_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/acc_valory_tv" android:textSize="18sp"
                    android:fontFamily="sans-serif-condensed" android:textColor="@color/black"
                    android:layout_marginBottom="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/valor_z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/acc_valorz_tv" android:textSize="18sp"
                    android:fontFamily="sans-serif-condensed" android:textColor="@color/black"
                    android:layout_marginBottom="10dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/giroscopio_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/giroscopio_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"/>
            <TextView
                    android:text="@string/valor_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/gir_valorx_tv"
                    android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/valor_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/gir_valory_tv" android:textSize="18sp"
                    android:fontFamily="sans-serif-condensed" android:textColor="@color/black"
                    android:layout_marginBottom="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/valor_z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/gir_valorz_tv" android:textSize="18sp"
                    android:fontFamily="sans-serif-condensed" android:textColor="@color/black"
                    android:layout_marginBottom="10dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/cmagneticos_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/cmagnetico_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"/>
            <TextView
                    android:text="@string/valor_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/cmag_valorx_tv"
                    android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/valor_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/cmag_valory_tv"
                    android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/valor_z"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/cmag_valorz_tv"
                    android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"/>
            <TextView
                    android:text="@string/barometro_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/barometro_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"/>
            <TextView
                    android:text="@string/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:id="@+id/bar_valor_tv"/>
            <TextView
                    android:text="@string/luminosidad_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/luminosidad_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"/>
            <TextView
                    android:text="@string/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:id="@+id/lum_valor_tv"/>
            <TextView
                    android:text="@string/termometro_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/termomemtro_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"
            />
            <TextView
                    android:text="@string/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:id="@+id/term_valor_tv"/>
            <TextView
                    android:text="@string/proximidad_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/humedad_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"
            />
            <TextView
                    android:text="@string/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:id="@+id/prox_valor_tv"/>
            <TextView
                    android:text="@string/humedad_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/proximidad_tv"
                    android:background="@color/colorTitle" android:fontFamily="sans-serif-condensed"
                    android:gravity="center" android:textSize="25sp" android:textColor="@color/black"
            />
            <TextView
                    android:text="@string/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textColor="@color/black"
                    android:textSize="18sp" android:fontFamily="sans-serif-condensed" android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:id="@+id/hum_valor_tv"/>
            <Button
                    android:text="@string/send_data_drizzle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_send_data_drizzle"
                    android:layout_marginTop="35dp" android:textColor="@color/black" android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp" android:layout_marginBottom="20dp"/>
            <Button
                    android:text="@string/stop_send_data_drizzle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btn_stop_send_data_drizzle"
                    android:layout_marginTop="10dp" android:textColor="@color/black" android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp" android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>